--- a/rebar.config
+++ b/rebar.config
@@ -6,6 +6,5 @@
 
 {eunit_opts,
  [no_tty,
-  {report, {eunit_progress, [colored, profile]}}
+  {report, {eunit_progress, [colored]}}
   ]}.
-                                  
